# trackfit

./: .gitignore  Dockerfile  README.md  asdasdasdpyproject.toml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/: main.py
src/crud/: __init__.py  max_rep.py  performance_base_class.py  performance_calculator_class.py  progress_performance.py  volume_performance.py
src/endpoints/: __init__.py  exercise_performance.py
src/routers/: __init__.py  routes.py
src/schemas/: __init__.py  exercises_schema.py
